--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "escape-the-maze",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html",  
+    "build": "parcel build index.html" 
   },
   "author": "Hazim Tulumovic - hejzbh",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "parcel": "^2.13.2"
   }
 }
