--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES6", // Verzija JavaScript-a na koju kompiliramo
-    "module": "ES6", // Koristi ES6 modules
-    "moduleResolution": "node", // Rešavanje modula kao u Node.js
-    "rootDir": "./ts", // Gde se nalaze tvoji TypeScript fajlovi
-    "outDir": "./_js", // Gde će biti smešteni generisani JavaScript fajlovi
-    "esModuleInterop": true, // Omogućava kompatibilnost sa ES module-ima
-    "strict": true // Aktivira striktni režim
+    "target": "ES6",
+    "module": "ES6", 
+    "moduleResolution": "node", 
+    "rootDir": "./ts", 
+    "outDir": "./_js", 
+    "esModuleInterop": true, 
+    "strict": true 
   },
   "include": [
-    "ts/**/*" // Uključi sve .ts fajlove iz ts foldera
+    "ts/**/*" 
   ],
   "exclude": [
-    "node_modules" // Isključi 'node_modules' iz pretrage
+    "node_modules"
   ]
 }
